# bdgl

./: .gitignore  CMakeLists.txt  README.md
include/glfw3/: glfw3.lib
lib/glad/include/glad/: glad.h
lib/glfw/: CMakeCache.txt
resources/shaders/: f_pink.glsl  fragment.glsl  vertex.glsl
src/: BDGL.cpp  BDGL.h  CMakeLists.txt  camera.cpp  camera.h  glad.c  image.cpp  image.h  main.cpp  shader.cpp  shader.h  texture.cpp  texture.h  transform.cpp  transform.h
src/core/: mesh.cpp  mesh.h  mesh.hpp  mesh_generator.hpp  vertex.h
